@@ -46,6 +46,7 @@ version <next>:
 - IV8 demuxer
 - CDG demuxer and decoder
 - R210 decoder
+- Auravision Aura decoder
 
 
 
